<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:minHeight="0dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_source_config"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/check_source_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_source_timeout"
            android:digits="1234567890"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text="@string/check_source_item" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="space_between">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discovery" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_tab_info" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_list" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_body" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="flex_end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button.TonalButton"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3Expressive.Button"
            android:text="@string/ok"
            tools:ignore="RtlHardcoded" />

    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>
