<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    tools:ignore="AlwaysShowAction">

    <group android:id="@+id/menu_group_on_line">
        <item
            android:id="@+id/menu_change_source"
            android:icon="@drawable/ic_exchange"
            android:title="@string/change_origin"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/menu_pre_manga_number"
        android:title="@string/pre_download"
        app:showAsAction="never" />


</menu>
