<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/edit_book_source" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/book_type"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/book_type"
                tools:ignore="TouchTargetSizeCheck" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_is_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/is_enable" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_is_enable_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/discovery" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_is_enable_cookie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/auto_save_cookie" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_is_enable_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/review"
                android:visibility="gone" />

        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_source_edit" />

</LinearLayout>